--- a/ml-basics/03 - Classification/03_Classification-R.ipynb
+++ b/ml-basics/03 - Classification/03_Classification-R.ipynb
@@ -86,7 +86,7 @@
         "\r\n",
         "The best way to learn about classification is to try it for yourself, so that's what you'll do in this exercise.\r\n",
         "\r\n",
-        "> We'll require some packages to knock-off this module. You can have them installed as: `install.packages(c('tidyverse', 'tidymodels', 'ranger', 'vip', 'palmerpenguins', 'skimr', 'paletteer', 'nnet', 'here'))`\r\n",
+        "> We'll require some packages to knock-off this module. You can have them installed as: `install.packages(c('tidyverse', 'tidymodels', 'ranger', 'vip', 'palmerpenguins', 'skimr', 'paletteer', 'nnet', 'here', 'doParallel'))`\r\n",
         "\r\n",
         "Alternatively, the script below checks whether you have the packages required to complete this module and installs them for you in case some are missing."
       ],
@@ -102,7 +102,7 @@
         "\r\n",
         "pacman::p_load('tidyverse', 'tidymodels', 'ranger',\r\n",
         "               'vip', 'skimr', 'here','palmerpenguins', 'kernlab',\r\n",
-        "               'janitor', 'paletteer', 'nnet')"
+        "               'janitor', 'paletteer', 'nnet', 'doParallel')"
       ],
       "outputs": [],
       "metadata": {
