--- a/ml-basics/03 - Classification/03_Classification-R.ipynb
+++ b/ml-basics/03 - Classification/03_Classification-R.ipynb
@@ -165,8 +165,8 @@
       "cell_type": "code",
       "execution_count": null,
       "source": [
-        "# Take a quick glance at the data\n",
-        "diabetes %>% \n",
+        "# Take a quick glance at the data\r\n",
+        "diabetes %>% \r\n",
         "  glimpse()"
       ],
       "outputs": [],
@@ -189,21 +189,21 @@
       "cell_type": "code",
       "execution_count": null,
       "source": [
-        "# Load the janitor package for cleaning data\n",
-        "library(janitor)\n",
-        "\n",
-        "# Clean data a bit\n",
-        "diabetes_select <- diabetes %>%\n",
-        "  # Encode Diabetic as category\n",
-        "  mutate(Diabetic = factor(Diabetic, levels = c(\"1\",\"0\"))) %>% \n",
-        "  # Drop PatientID column\n",
-        "  select(-PatientID) %>% \n",
-        "  # Clean column names\n",
-        "  clean_names()\n",
-        "\n",
-        "\n",
-        "# View data set\n",
-        "diabetes_select %>% \n",
+        "# Load the janitor package for cleaning data\r\n",
+        "library(janitor)\r\n",
+        "\r\n",
+        "# Clean data a bit\r\n",
+        "diabetes_select <- diabetes %>%\r\n",
+        "  # Encode Diabetic as category\r\n",
+        "  mutate(Diabetic = factor(Diabetic, levels = c(\"1\",\"0\"))) %>% \r\n",
+        "  # Drop PatientID column\r\n",
+        "  select(-PatientID) %>% \r\n",
+        "  # Clean column names\r\n",
+        "  clean_names()\r\n",
+        "\r\n",
+        "\r\n",
+        "# View data set\r\n",
+        "diabetes_select %>% \r\n",
         "  slice_head(n = 10)"
       ],
       "outputs": [],
@@ -226,13 +226,13 @@
       "cell_type": "code",
       "execution_count": null,
       "source": [
-        "# Pivot data to a long format\n",
-        "diabetes_select_long <- diabetes_select %>% \n",
-        "    pivot_longer(!diabetic, names_to = \"features\", values_to = \"values\")\n",
-        "\n",
-        "\n",
-        "# Print the first 10 rows\n",
-        "diabetes_select_long %>% \n",
+        "# Pivot data to a long format\r\n",
+        "diabetes_select_long <- diabetes_select %>% \r\n",
+        "    pivot_longer(!diabetic, names_to = \"features\", values_to = \"values\")\r\n",
+        "\r\n",
+        "\r\n",
+        "# Print the first 10 rows\r\n",
+        "diabetes_select_long %>% \r\n",
         "  slice_head(n = 10)"
       ],
       "outputs": [],
@@ -253,13 +253,13 @@
       "cell_type": "code",
       "execution_count": null,
       "source": [
-        "theme_set(theme_light())\n",
-        "# Make a box plot for each predictor feature\n",
-        "diabetes_select_long %>% \n",
-        "  ggplot(mapping = aes(x = diabetic, y = values, fill = features)) +\n",
-        "  geom_boxplot() + \n",
-        "  facet_wrap(~ features, scales = \"free\", ncol = 4) +\n",
-        "  scale_color_viridis_d(option = \"plasma\", end = .7) +\n",
+        "theme_set(theme_light())\r\n",
+        "# Make a box plot for each predictor feature\r\n",
+        "diabetes_select_long %>% \r\n",
+        "  ggplot(mapping = aes(x = diabetic, y = values, fill = features)) +\r\n",
+        "  geom_boxplot() + \r\n",
+        "  facet_wrap(~ features, scales = \"free\", ncol = 4) +\r\n",
+        "  scale_color_viridis_d(option = \"plasma\", end = .7) +\r\n",
         "  theme(legend.position = \"none\")"
       ],
       "outputs": [],
@@ -298,29 +298,29 @@
       "cell_type": "code",
       "execution_count": null,
       "source": [
-        "# Load the Tidymodels packages\n",
-        "library(tidymodels)\n",
-        "\n",
-        "\n",
-        "\n",
-        "# Split data into 70% for training and 30% for testing\n",
-        "set.seed(2056)\n",
-        "diabetes_split <- diabetes_select %>% \n",
-        "  initial_split(prop = 0.70)\n",
-        "\n",
-        "\n",
-        "# Extract the data in each split\n",
-        "diabetes_train <- training(diabetes_split)\n",
-        "diabetes_test <- testing(diabetes_split)\n",
-        "\n",
-        "\n",
-        "# Print the number of cases in each split\n",
-        "cat(\"Training cases: \", nrow(diabetes_train), \"\\n\",\n",
-        "    \"Test cases: \", nrow(diabetes_test), sep = \"\")\n",
-        "\n",
-        "\n",
-        "# Print out the first 5 rows of the training set\n",
-        "diabetes_train %>% \n",
+        "# Load the Tidymodels packages\r\n",
+        "library(tidymodels)\r\n",
+        "\r\n",
+        "\r\n",
+        "\r\n",
+        "# Split data into 70% for training and 30% for testing\r\n",
+        "set.seed(2056)\r\n",
+        "diabetes_split <- diabetes_select %>% \r\n",
+        "  initial_split(prop = 0.70)\r\n",
+        "\r\n",
+        "\r\n",
+        "# Extract the data in each split\r\n",
+        "diabetes_train <- training(diabetes_split)\r\n",
+        "diabetes_test <- testing(diabetes_split)\r\n",
+        "\r\n",
+        "\r\n",
+        "# Print the number of cases in each split\r\n",
+        "cat(\"Training cases: \", nrow(diabetes_train), \"\\n\",\r\n",
+        "    \"Test cases: \", nrow(diabetes_test), sep = \"\")\r\n",
+        "\r\n",
+        "\r\n",
+        "# Print out the first 5 rows of the training set\r\n",
+        "diabetes_train %>% \r\n",
         "  slice_head(n = 5)"
       ],
       "outputs": [],
@@ -345,13 +345,13 @@
       "cell_type": "code",
       "execution_count": null,
       "source": [
-        "# Make a model specifcation\n",
-        "logreg_spec <- logistic_reg() %>% \n",
-        "  set_engine(\"glm\") %>% \n",
-        "  set_mode(\"classification\")\n",
-        "\n",
-        "\n",
-        "# Print the model specification\n",
+        "# Make a model specifcation\r\n",
+        "logreg_spec <- logistic_reg() %>% \r\n",
+        "  set_engine(\"glm\") %>% \r\n",
+        "  set_mode(\"classification\")\r\n",
+        "\r\n",
+        "\r\n",
+        "# Print the model specification\r\n",
         "logreg_spec"
       ],
       "outputs": [],
@@ -372,12 +372,12 @@
       "cell_type": "code",
       "execution_count": null,
       "source": [
-        "# Train a logistic regression model\n",
-        "logreg_fit <- logreg_spec %>% \n",
-        "  fit(diabetic ~ ., data = diabetes_train)\n",
-        "\n",
-        "\n",
-        "# Print the model object\n",
+        "# Train a logistic regression model\r\n",
+        "logreg_fit <- logreg_spec %>% \r\n",
+        "  fit(diabetic ~ ., data = diabetes_train)\r\n",
+        "\r\n",
+        "\r\n",
+        "# Print the model object\r\n",
         "logreg_fit"
       ],
       "outputs": [],
@@ -400,13 +400,13 @@
       "cell_type": "code",
       "execution_count": null,
       "source": [
-        "# Make predictions then bind them to the test set\n",
-        "results <- diabetes_test %>% select(diabetic) %>% \n",
-        "  bind_cols(logreg_fit %>% predict(new_data = diabetes_test))\n",
-        "\n",
-        "\n",
-        "# Compare predictions\n",
-        "results %>% \n",
+        "# Make predictions then bind them to the test set\r\n",
+        "results <- diabetes_test %>% select(diabetic) %>% \r\n",
+        "  bind_cols(logreg_fit %>% predict(new_data = diabetes_test))\r\n",
+        "\r\n",
+        "\r\n",
+        "# Compare predictions\r\n",
+        "results %>% \r\n",
         "  slice_head(n = 10)"
       ],
       "outputs": [],
@@ -431,7 +431,7 @@
       "cell_type": "code",
       "execution_count": null,
       "source": [
-        "# Calculate accuracy: proportion of data predicted correctly\n",
+        "# Calculate accuracy: proportion of data predicted correctly\r\n",
         "accuracy(data = results, truth = diabetic, estimate = .pred_class)"
       ],
       "outputs": [],
@@ -1574,12 +1574,12 @@
       "cell_type": "code",
       "execution_count": null,
       "source": [
-        "set.seed(2056)\n",
-        "# Create regular grid of 6 values for each tuning parameters\n",
-        "svm_grid <- grid_regular(parameters(svm_spec), levels = 6)\n",
-        "\n",
-        "# Print out some parameters in our grid\n",
-        "svm_grid %>% \n",
+        "set.seed(2056)\r\n",
+        "# Create regular grid of 6 values for each tuning parameters\r\n",
+        "svm_grid <- grid_regular(parameters(svm_spec), levels = 6)\r\n",
+        "\r\n",
+        "# Print out some parameters in our grid\r\n",
+        "svm_grid %>% \r\n",
         "  slice_head(n = 10)"
       ],
       "outputs": [],
@@ -1604,11 +1604,11 @@
       "cell_type": "code",
       "execution_count": null,
       "source": [
-        "set.seed(2056)\n",
-        "# Bootstrap resampling\n",
-        "penguins_bs <- bootstraps(penguins_train, times = 10)\n",
-        "\n",
-        "penguins_bs"
+        "set.seed(2056)\r\n",
+        "# Bootstrap resampling\r\n",
+        "penguins_bs <- bootstraps(penguins_train, times = 10)\r\n",
+        "\r\n",
+        "# penguins_bs"
       ],
       "outputs": [],
       "metadata": {
@@ -1630,14 +1630,14 @@
       "cell_type": "code",
       "execution_count": null,
       "source": [
-        "doParallel::registerDoParallel()\n",
-        "\n",
-        "# Model tuning via a grid search\n",
-        "set.seed(2056)\n",
-        "svm_res <- tune_grid(\n",
-        "  object = svm_wflow,\n",
-        "  resamples = penguins_bs,\n",
-        "  grid = svm_grid\n",
+        "doParallel::registerDoParallel()\r\n",
+        "\r\n",
+        "# Model tuning via a grid search\r\n",
+        "set.seed(2056)\r\n",
+        "svm_res <- tune_grid(\r\n",
+        "  object = svm_wflow,\r\n",
+        "  resamples = penguins_bs,\r\n",
+        "  grid = svm_grid\r\n",
         ")"
       ],
       "outputs": [],
