--- a/ml-basics/04 - Clustering/challenges/04_Clustering_Challenge.ipynb
+++ b/ml-basics/04 - Clustering/challenges/04_Clustering_Challenge.ipynb
@@ -33,11 +33,11 @@
         {
             "cell_type": "markdown",
             "source": [
-                "Your challenge is to identify the number of discrete clusters present in the data, and create a clustering model that separates the data into that number of clusters. You should also visualize the clusters to evaluate the level of separation achieved by your model.\n",
-                "\n",
-                "Add markdown and code cells as required to create your solution.\n",
-                "\n",
-                "> **Note**: There is no single \"correct\" solution. A sample solution is provided in 04 - Clustering Solution.ipynb.\n"
+                "Your challenge is to identify the number of discrete clusters present in the data, and create a clustering model that separates the data into that number of clusters. You should also visualize the clusters to evaluate the level of separation achieved by your model.\r\n",
+                "\r\n",
+                "Add markdown and code cells as required to create your solution.\r\n",
+                "\r\n",
+                "> **Note**: There is no single \"correct\" solution. A sample solution is provided in *04_Clustering_Solution.ipynb*.\r\n"
             ],
             "metadata": {}
         },
